--- a/index.html
+++ b/index.html
@@ -2,14 +2,17 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <meta charset="UTF-8" />
+  <link rel="icon" href="./favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>趣融分期</title>
+  <script type="module" crossorigin src="./default/default-d2bf08c0.js"></script>
+  <link rel="stylesheet" href="./assets/default-f7437577.css">
 </head>
 
 <body>
-  hello github
+  <div id="app"></div>
+  
 </body>
 
 </html>
