--- a/index.html
+++ b/index.html
@@ -4,17 +4,10 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" href="./favicon.ico" />
-  <meta http-equiv=“content-type” content=“text/html”>
-  <meta http-equiv="Cache-Control" content="no-transform" />
-  <meta name="viewport"
-    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-  <meta name="format-detection" content="telephone=no" />
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name=“app-mobile-web-app-status-bar-style” content=“black-translucent” />
-
-  <title>趣融分期</title>
-  <script type="module" crossorigin src="./default/default-73ed04be.js"></script>
-  <link rel="stylesheet" href="./assets/default-83f5103d.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>技术转移平台</title>
+  <script type="module" crossorigin src="./default/default-d77c5d38.js"></script>
+  <link rel="stylesheet" href="./assets/default-3ae690a6.css">
 </head>
 
 <body>
