--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" href="./favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv=“content-type” content=“text/html”>
+  <meta http-equiv="Cache-Control" content="no-transform" />
+  <meta name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+  <meta name="format-detection" content="telephone=no" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name=“app-mobile-web-app-status-bar-style” content=“black-translucent” />
   <title>技术转移平台</title>
-  <script type="module" crossorigin src="./default/default-e0c1c96e.js"></script>
-  <link rel="stylesheet" href="./assets/default-e7487fdf.css">
+  <script type="module" crossorigin src="./default/default-3ef5daba.js"></script>
+  <link rel="stylesheet" href="./assets/default-834aba03.css">
 </head>
 
 <body>
