--- a/html/index.html
+++ b/html/index.html
@@ -3,7 +3,15 @@
 
 <head>
   <title>2023MS网站</title>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <!-- <link rel="icon" href="/favicon.ico" /> -->
+  <meta http-equiv=“content-type” content=“text/html”>
+  <meta http-equiv="Cache-Control" content="no-transform" />
+  <meta name="viewport"
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+  <meta name="format-detection" content="telephone=no" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name=“app-mobile-web-app-status-bar-style” content=“black-translucent” />
 
   <link rel="stylesheet" href="../css/swiper-bundle.min.css">
   <link rel="stylesheet" href="../css/base.css">
