--- a/html/index.html
+++ b/html/index.html
@@ -22,7 +22,7 @@
     <h1 class="h1" id=""></h1>
     <!---nav--->
     <div class="nav-main">
-      <h2 class="logo1"><img src="../img/logo1.png" alt=""></h2>
+      <h2 class="logo1"><a href="javascript:;"><img src="../img/logo1.png" alt="logo1"></a></h2>
       <div class="menu-btn">
         <b></b>
         <b></b>
@@ -30,86 +30,59 @@
       </div>
       <nav class="nav-list">
         <div class="nav-box">
-          <span class="show">MS亚太2023</span>
+          <span class="show">MS Events</span>
           <ul class="show-list">
-            <li class="li">MS亚洲2022</li>
-            <li class="li">MS中国2022</li>
-            <li class="li">近期活动</li>
-            <li class="li">峰会回顾</li>
+            <li class="li"><a href="javascript:;">MS亚太2023</a></li>
+            <li class="li"><a href="javascript:;">MS亚洲2022</a></li>
+            <li class="li"><a href="javascript:;">MS中国2022</a></li>
+            <li class="li"><a href="javascript:;">近期活动</a></li>
+            <li class="li"><a href="javascript:;">峰会回顾</a></li>
           </ul>
         </div>
         <div class="nav-box">
-          <span class="show">品牌</span>
+          <span class="show">MS 360</span>
           <ul class="show-list">
-            <li class="li">文化</li>
-            <li class="li">数据</li>
-            <li class="li">游戏</li>
-            <li class="li">元宇宙</li>
-            <li class="li">科技</li>
-            <li class="li">品牌故事</li>
-            <li class="li">MS报道</li>
+            <li class="li"><a href="javascript:;">品牌</a></li>
+            <li class="li"><a href="javascript:;">文化</a></li>
+            <li class="li"><a href="javascript:;">数据</a></li>
+            <li class="li"><a href="javascript:;">游戏</a></li>
+            <li class="li"><a href="javascript:;">元宇宙</a></li>
+            <li class="li"><a href="javascript:;">科技</a></li>
+            <li class="li"><a href="javascript:;">品牌故事</a></li>
+            <li class="li"><a href="javascript:;">MS报道</a></li>
           </ul>
         </div>
         <div class="nav-box">
-          <span class="show">小米科技</span>
+          <span class="show">Learn</span>
+        </div>
+        <div class="nav-box">
+          <span class="show">Branded Content</span>
           <ul class="show-list">
-            <li class="li">ninebot</li>
-            <li class="li">百度</li>
+            <li class="li"><a href="javascript:;">小米科技</a></li>
+            <li class="li"><a href="javascript:;">ninebot</a></li>
+            <li class="li"><a href="javascript:;">百度</a></li>
           </ul>
         </div>
         <div class="nav-box">
-          <span class="show">MS亚太2023</span>
+          <span class="show">Resources</span>
           <ul class="show-list">
-            <li class="li">TOP 100 品牌</li>
-            <li class="li">报告</li>
-            <li class="li">生态图</li>
+            <li class="li"><a href="javascript:;">MS亚太2023</a></li>
+            <li class="li"><a href="javascript:;">TOP 100 品牌</a></li>
+            <li class="li"><a href="javascript:;">报告</a></li>
+            <li class="li"><a href="javascript:;">生态图</a></li>
           </ul>
         </div>
       </nav>
-      <h2 class="logo2"><img class="img" src="../img/logo2.png" alt=""></h2>
-      <div class="login-box">
-        <span class="icon-box"><img class="img" src="../img/img04.png" alt=""></span> <span class="login"
-          btn>登录</span><em class="tag">/</em><span btn class="reg">注册</span>
+      <div class="right">
+        <h2 class="logo2"><a href="javascript:;"><img class="img" src="../img/logo2.png" alt="logo2"></a></h2>
+        <div class="login-box">
+          <span class="icon-box"><img class="img" src="../img/img04.png" alt=""></span> <span class="login"
+            btn>登录</span><em class="tag">/</em><span btn class="reg">注册</span>
+        </div>
       </div>
+
+
     </div>
-    <nav class="phone-nav-list">
-      <div class="nav-box">
-        <span class="show">MS亚太2023</span>
-        <ul class="show-list">
-          <li class="li">MS亚洲2022</li>
-          <li class="li">MS中国2022</li>
-          <li class="li">近期活动</li>
-          <li class="li">峰会回顾</li>
-        </ul>
-      </div>
-      <div class="nav-box">
-        <span class="show">品牌</span>
-        <ul class="show-list">
-          <li class="li">文化</li>
-          <li class="li">数据</li>
-          <li class="li">游戏</li>
-          <li class="li">元宇宙</li>
-          <li class="li">科技</li>
-          <li class="li">品牌故事</li>
-          <li class="li">MS报道</li>
-        </ul>
-      </div>
-      <div class="nav-box">
-        <span class="show">小米科技</span>
-        <ul class="show-list">
-          <li class="li">ninebot</li>
-          <li class="li">百度</li>
-        </ul>
-      </div>
-      <div class="nav-box">
-        <span class="show">MS亚太2023</span>
-        <ul class="show-list">
-          <li class="li">TOP 100 品牌</li>
-          <li class="li">报告</li>
-          <li class="li">生态图</li>
-        </ul>
-      </div>
-    </nav>
     <div class="nav-line"></div>
     <!---nav end--->
 
@@ -118,32 +91,36 @@
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <h3 class="title" style="color:red">这里放主题Text here文字这里放主题文字这里放主题Slide 1</h3>
+            <h3 class="title"><a href="javascript:;"> 这里放主题Text here文字这里放主题文字这里放主题Slide 2</a></h3>
           </div>
-          <div class="swiper-slide">
-            <h3 class="title">这里放主题Text here文字这里放主题文字这里放主题Slide 2</h3>
+          <div class="swiper-slide" style="background-image: url('../img/default/img01.png');">
+            <h3 class="title"><a href="javascript:;"> 这里放主题Text here文字这里放主题文字这里放主题Slide 2</a></h3>
           </div>
-          <div class="swiper-slide">
-            <h3 class="title">这里放主题Text here文字这里放主题文字这里放主题Slide 3</h3>
+          <div class="swiper-slide" style="background-image: url('../img/default/img02.png');">
+            <h3 class="title"><a href="javascript:;"> 这里放主题Text here文字这里放主题文字这里放主题Slide 2</a></h3>
           </div>
-          <div class="swiper-slide">
-            <h3 class="title">这里放主题Text here文字这里放主题文字这里放主题Slide 4</h3>
+          <div class="swiper-slide" style="background-image: url('../img/default/img03.png');">
+            <h3 class="title"><a href="javascript:;"> 这里放主题Text here文字这里放主题文字这里放主题Slide 2</a></h3>
           </div>
-          <div class="swiper-slide">
-            <h3 class="title">这里放主题Text here文字这里放主题文字这里放主题Slide 5</h3>
+          <div class="swiper-slide" style="background-image: url('../img/default/img04.jpg');">
+            <h3 class="title"><a href="javascript:;"> 这里放主题Text here文字这里放主题文字这里放主题Slide 2</a></h3>
           </div>
-
         </div>
         <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
         <div class="swiper-pagination"></div>
       </div>
       <ul class="swiper-title-list">
-        <li btn class="title">Slide 1</li>
-        <li btn class="title">Slide 2</li>
-        <li btn class="title">Slide 3</li>
-        <li btn class="title">Slide 4</li>
-        <li btn class="title">Slide 5</li>
+        <li btn class="title"> <a href="javascript:;">Slide 1</a></li>
+        <li btn class="title"> <a href="javascript:;">Slide 1</a></li>
+        <li btn class="title"> <a href="javascript:;">Slide 1</a></li>
+        <li btn class="title"> <a href="javascript:;">Slide 1</a></li>
+        <li btn class="title"> <a href="javascript:;">Slide 1</a></li>
+        <li btn class="title"> <a href="javascript:;">Slide 1</a></li>
+        <li btn class="title"> <a href="javascript:;">Slide 1</a></li>
+        <li btn class="title"> <a href="javascript:;">Slide 1</a></li>
+        <li btn class="title"> <a href="javascript:;">Slide 1</a></li>
+        <li btn class="title"> <a href="javascript:;">Slide 1</a></li>
       </ul>
       <div class="slogen-box">
         <h3 class="title">使命</h3>
@@ -154,14 +131,16 @@
     <!--banner -- end-->
 
     <!--最新活动---->
-    <section class="floor campaign">
+    <section class="floor campaign-floor">
       <h3 class="common-title">最新活动</h3>
       <div class="campaign-main clearfix">
         <div class="img-box">
-          <img src="../img/default/img01.png" class="img" alt="">
+          <a href="javascript:;">
+            <img src="../img/default/img01.png" class="img" alt="">
+          </a>
         </div>
         <div class="info-show-box">
-          <h3 class="campaign-title">第七届Morketing Summit 2022-2023 灵眸大赏·全球营销商业峰会——“穿透”</h3>
+          <h3 class="campaign-title"><a href="javascript:;">第七届Morketing Summit 2022-2023 灵眸大赏·全球营销商业峰会——“穿透”</a></h3>
           <p class="timer">预计开始时间：2023年3月21日 8:30 ～ 2023年3月23日 18:00</p>
           <p class="address">上海·浦东新区海阳西路551号 前滩香格里拉大酒店</p>
           <div class="btn-box">
@@ -184,13 +163,15 @@
               <source src="../img/tv.mp4" type="video/mp4">
             </video>
           </div>
-          <div class="tv-info">
-            <span class="time">视频时长：00：36：12</span>
-            <span class="dd">2022/10/24</span>
+          <div class="tv-info-main">
+            <div class="tv-info">
+              <span class="time">视频时长：00：36：12</span>
+              <span class="dd">2022/10/24</span>
+            </div>
+            <h3 class="tv-title" title="视频演讲主题在这里视频演讲主题Text"><a href="javascript:;">视频演讲主题在这里视频演讲主题Text here</a></h3>
+            <p class="other-info">演讲公司、职位</p>
+            <p class="other-info">演讲者描述</p>
           </div>
-          <h3 class="tv-title" title="视频演讲主题在这里视频演讲主题Text">视频演讲主题在这里视频演讲主题Text here</h3>
-          <p class="other-info">演讲公司、职位</p>
-          <p class="other-info">演讲者描述</p>
         </section>
         <section class="tv-show-main">
           <div class="tv-box">
@@ -198,15 +179,18 @@
               <source src="../img/tv.mp4" type="video/mp4">
             </video>
           </div>
-          <div class="tv-info">
-            <span class="time">视频时长：00：36：12</span>
-            <span class="dd">2022/10/24</span>
+          <div class="tv-info-main">
+            <div class="tv-info">
+              <span class="time">视频时长：00：36：12</span>
+              <span class="dd">2022/10/24</span>
+            </div>
+            <h3 class="tv-title" title="视频演讲主题在这里视频演讲主题Text"><a href="javascript:;">视频演讲主题在这里视频演讲主题Text here</a></h3>
+            <p class="other-info">演讲公司、职位</p>
+            <p class="other-info">演讲者描述</p>
           </div>
-          <h3 class="tv-title" title="视频演讲主题在这里视频演讲主题Text">视频演讲主题在这里视频演讲主题Text here</h3>
-          <p class="other-info">演讲公司、职位</p>
-          <p class="other-info">演讲者描述</p>
         </section>
-        <div class="get-more" btn>查看更多<em class="icon-box"><img class="icon" src="../img/img03.png" alt=""></em></div>
+        <div class="get-more" btn><a href="javascript:;">查看更多<em class="icon-box"><img class="icon"
+                src="../img/img03.png" alt=""></em></a></div>
       </div>
     </section>
     <!--行业演讲 -- end---->
@@ -216,12 +200,15 @@
       <h3 class="common-title">MS360</h3>
       <section class="news-list">
         <div class="img-box">
-          <div class="news-tag">品牌故事</div>
-          <img src="../img/default/img03.png" class="img" alt="新闻标题">
+          <a href="javascript:;">
+            <div class="news-tag">品牌故事</div>
+            <img src="../img/default/img03.png" class="img" alt="新闻标题">
+          </a>
         </div>
         <div class="new-info">
           <h3 class="new-title" title="内容主题在这里TextHere内容主题在这里TextHere内容主题在这里TextHere内容">
-            内容主题在这里TextHere内容主题在这里TextHere内容主题在这里TextHere内容</h3>
+            <a href="javascript:;">内容主题在这里TextHere内容主题在这里TextHere内容主题在这里TextHere内容</a>
+          </h3>
           <p class="new-brief">内容简介写在这里TextHere内容简介写在这里TextHere内容简介写在这里TextHere内容简介写在这里TextHere</p>
           <footer class="new-footer">
             <div class="holder"><em class="icon red">H</em>诙谐曲的诗人</div>
@@ -231,30 +218,36 @@
       </section>
       <section class="news-list">
         <div class="img-box">
-          <div class="news-tag">品牌</div>
-          <img src="../img/default/img03.png" class="img" alt="新闻标题">
+          <a href="javascript:;">
+            <div class="news-tag">品牌故事</div>
+            <img src="../img/default/img03.png" class="img" alt="新闻标题">
+          </a>
         </div>
         <div class="new-info">
           <h3 class="new-title" title="内容主题在这里TextHere内容主题在这里TextHere内容主题在这里TextHere内容">
-            内容主题在这里TextHere内容主题在这里TextHere内容主题在这里TextHere内容</h3>
+            <a href="javascript:;">内容主题在这里TextHere内容主题在这里TextHere内容主题在这里TextHere内容</a>
+          </h3>
           <p class="new-brief">内容简介写在这里TextHere内容简介写在这里TextHere内容简介写在这里TextHere内容简介写在这里TextHere</p>
           <footer class="new-footer">
-            <div class="holder"><em class="icon blue">H</em>诙谐曲的诗人</div>
+            <div class="holder"><em class="icon red">H</em>诙谐曲的诗人</div>
             <span class="time">2023年02月14日 17：21</span>
           </footer>
         </div>
       </section>
       <section class="news-list">
         <div class="img-box">
-          <div class="news-tag three">元宇宙</div>
-          <img src="../img/default/img03.png" class="img" alt="新闻标题">
+          <a href="javascript:;">
+            <div class="news-tag">品牌故事</div>
+            <img src="../img/default/img03.png" class="img" alt="新闻标题">
+          </a>
         </div>
         <div class="new-info">
           <h3 class="new-title" title="内容主题在这里TextHere内容主题在这里TextHere内容主题在这里TextHere内容">
-            内容主题在这里TextHere内容主题在这里TextHere内容主题在这里TextHere内容</h3>
+            <a href="javascript:;">内容主题在这里TextHere内容主题在这里TextHere内容主题在这里TextHere内容</a>
+          </h3>
           <p class="new-brief">内容简介写在这里TextHere内容简介写在这里TextHere内容简介写在这里TextHere内容简介写在这里TextHere</p>
           <footer class="new-footer">
-            <div class="holder"><em class="icon green">H</em>诙谐曲的诗人</div>
+            <div class="holder"><em class="icon red">H</em>诙谐曲的诗人</div>
             <span class="time">2023年02月14日 17：21</span>
           </footer>
         </div>
@@ -282,47 +275,10 @@
 </body>
 <script src="../js/jquery-1.11.3.min.js"></script>
 <script src="../js/swiper.min.js"></script>
+<script src="../js/fastclick.js"></script>
+<script src="../js/base.js"></script>
 <!-- Initialize Swiper -->
-<script>
-  var swiper = new Swiper(".mySwiper", {
-    slidesPerView: 1,
-    spaceBetween: 30,
-    loop: true,
-    pagination: {
-      el: ".swiper-pagination",
-      clickable: true,
-    },
-    navigation: {
-      nextEl: ".swiper-button-next",
-      prevEl: ".swiper-button-prev",
-    },
-    on: {
-      slideChange: function () {
-        var index = this.activeIndex;
-        $('.swiper-title-list .title').eq(index - 1).addClass('cur').siblings('li').removeClass('cur')
-      }
-    },
-    clickable: true,
-    renderBullet: function (index, className) {
-      return '<span class="swiper-btn">' + (index + 1) + "</span>"
-    },
-  });
-  $('.swiper-title-list').on('click', 'li', function () {
-    if (!$(this).hasClass('cur')) {
-      var index = $(this).index();
-      swiper.slideTo(index + 1, 1000, false);
-    }
-  })
-  $('.menu-btn').on('click', function () {
-    $(this).toggleClass('menu-btn-active');
-    $('.phone-nav-list').toggle(300)
-  })
-  $('.phone-nav-list .nav-box .show').on('click', function () {
-    $(this).parents('.nav-box').siblings('.nav-box').find('.show-list').hide(300);
-    $(this).parents('.nav-box').find('.show-list').toggle(300);
-  })
 
-</script>
 
 
 
