--- a/html/index.html
+++ b/html/index.html
@@ -252,7 +252,7 @@
           </footer>
         </div>
       </section>
-      <a href="javascript:;" class="get-more"><img src="../img/img07.png" alt=""></a>
+      <a href="javascript:;" class="get-more">查看更多</a>
     </section>
 
     <!--MS360 -- end---->
