--- a/html/login.html
+++ b/html/login.html
@@ -12,6 +12,7 @@
 
 <body>
   <div class="cloud"></div>
+  <!-- 登陆--->
   <div class="common-layer layer-login" style="display: none;">
     <h3 class="title">登录 <span btn class="close"><img class="img" src="../img/img08.png" alt=""></span></h3>
     <div class="tab-box">
@@ -96,6 +97,7 @@
     </footer>
   </div>
 
+  <!--  注册--->
   <div class="common-layer layer-reg" style="display: none;">
     <h3 class="title">用户注册 <span btn class="close"><img class="img" src="../img/img08.png" alt=""></span></h3>
     <div class="form-main">
@@ -136,6 +138,8 @@
     </div>
   </div>
 
+
+  <!--  微信登陆--->
   <div class=" common-layer layer-wx-login" style="display: none;">
     <h3 class="title">微信登录 <span btn class="close"><img class="img" src="../img/img08.png" alt=""></span></h3>
     <div class="img-box">
@@ -148,6 +152,7 @@
     </div>
   </div>
 
+  <!--  微信注册--->
   <div class=" common-layer layer-wx-reg">
     <h3 class="title">微信注册 <span btn class="close"><img class="img" src="../img/img08.png" alt=""></span></h3>
     <div class="img-box">
@@ -165,7 +170,7 @@
     </div>
   </div>
 
-
+  <!--   错误提醒--->
   <div class="common-layer layer-msg">
     <div class="show-main">
       <span class="icon"><img class="img" src="../img/img09.png" alt=""></span>
