--- a/html/index.html
+++ b/html/index.html
@@ -38,7 +38,7 @@
           <input type="text" class="inp" name="name" placeholder="请输入姓名">
         </div>
         <div class="form-list">
-          <input type="text" class="inp" name="mobile" placeholder="请输入手机号">
+          <input type="text" class="inp mobile" name="mobile" maxlength="11" placeholder="请输入手机号">
         </div>
         <div class="form-list">
           <input type="text" class="inp" name="code" placeholder="请输入验证码">
@@ -52,24 +52,24 @@
         </div>
         <div class="form-list-check">
           <h4 class="form-title">2.资金需求</h4>
-          <label class="common-checkbox-txt"><input name="money" type="radio" class="input"><span
+          <label class="common-checkbox-txt"><input name="money" value="1" type="radio" class="input"><span
               class="label">5-10万</span></label>
-          <label class="common-checkbox-txt"><input name="money" type="radio" class="input"><span
+          <label class="common-checkbox-txt"><input name="money" value="2" type="radio" class="input"><span
               class="label">10-15万</span></label>
-          <label class="common-checkbox-txt"><input name="money" type="radio" class="input"><span
+          <label class="common-checkbox-txt"><input name="money" value="3" type="radio" class="input"><span
               class="label">15-20万</span></label>
         </div>
         <div class="form-list-check">
           <h4 class="form-title">3.资质证明（可多选）</h4>
-          <label class="common-checkbox-txt"><input type="checkbox" name="moneySize" class="input"><span
+          <label class="common-checkbox-txt"><input type="checkbox" name="moneySize" value="房产" class="input"><span
               class="label">房产</span></label>
-          <label class="common-checkbox-txt"><input type="checkbox" name="moneySize" class="input"><span
+          <label class="common-checkbox-txt"><input type="checkbox" name="moneySize" value="车产" class="input"><span
               class="label">车产</span></label>
-          <label class="common-checkbox-txt"><input type="checkbox" name="moneySize" class="input"><span
+          <label class="common-checkbox-txt"><input type="checkbox" name="moneySize" value="营业执照" class="input"><span
               class="label">营业执照</span></label>
-          <label class="common-checkbox-txt"><input type="checkbox" name="moneySize" class="input"><span
+          <label class="common-checkbox-txt"><input type="checkbox" name="moneySize" value="公积金" class="input"><span
               class="label">公积金</span></label>
-          <label class="common-checkbox-txt"><input type="checkbox" name="moneySize" class="input"><span
+          <label class="common-checkbox-txt"><input type="checkbox" name="moneySize" value="社保" class="input"><span
               class="label">社保</span></label>
         </div>
         <div class="pact">
