--- a/html/index.html
+++ b/html/index.html
@@ -19,18 +19,18 @@
 
 <body>
   <article class="page-page">
+    <h1 class="h1 title">这是h1用于seo页面不显示</h1>
+    <h2 class="h1 title">这是h2用于seo页面不显示</h2>
     <header class="page-header">
       <div class="logo-box"><img src="../img/logo.png" alt="捷融贷" title="捷融贷" class="logo" alt=""></div>
       <div class="right-txt">具体放款金额以审批结果为准</div>
     </header>
     <section class="banner-main">
-      <div class="txt-show">
-        <h3 class="banner-title">温馨提示</h3>
-        <p class="banner-txt">近期无贷款需求者及中介同行请勿申请，以免打扰到您</p>
-        <p class="banner-txt">单位未缴纳社保和公积金，请不要申请。</p>
-        <p class="banner-txt">必须单位正在缴纳，并且连续缴纳一年以上</p>
-        <div class="banner-big">填写咨询&专业贷款顾问服务</div>
-      </div>
+      <h3 class="banner-title">温馨提示</h3>
+      <p class="banner-txt">近期无贷款需求者及中介同行请勿申请，以免打扰到您</p>
+      <p class="banner-txt">单位未缴纳社保和公积金，请不要申请。</p>
+      <p class="banner-txt">必须单位正在缴纳，并且连续缴纳一年以上</p>
+      <div class="banner-big">填写咨询&专业贷款顾问服务</div>
     </section>
     <section class="form-main">
       <form id="form" name="form" action="" onSubmit="return submitFn()">
@@ -41,7 +41,7 @@
           <input type="text" class="inp mobile" name="mobile" maxlength="11" placeholder="请输入手机号">
         </div>
         <div class="form-list">
-          <input type="text" class="inp" name="code" placeholder="请输入验证码">
+          <input type="number" class="inp" name="code" placeholder="请输入验证码">
           <div class="get-code">获取验证码</div>
           <div class="wait-code" style="display: none;">(<span class="num">60</span>s)后获取</div>
         </div>
