--- a/html/fang.html
+++ b/html/fang.html
@@ -13,7 +13,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name=“app-mobile-web-app-status-bar-style” content=“black-translucent” />
 
-  <link rel="stylesheet" href="../css/base.css">
+  <link rel="stylesheet" href="../css/fang.css">
   <link rel="stylesheet" href="../css/animate.min.css">
 </head>
 
