--- a/html/qi.html
+++ b/html/qi.html
@@ -13,8 +13,8 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name=“app-mobile-web-app-status-bar-style” content=“black-translucent” />
 
+  <link rel="stylesheet" href="../css/picker.css">
   <link rel="stylesheet" href="../css/qi.css">
-  <link rel="stylesheet" href="../js/style.css">
   <link rel="stylesheet" href="../css/animate.min.css">
 </head>
 
@@ -35,9 +35,8 @@
           <div class="get-code">获取验证码</div>
           <div class="wait-code" style="display: none;">(<span class="num">60</span>s)后获取</div>
         </div>
-        <div class="form-list address" id="address" >
-          <input type="text" class="inp inp-address" name="mobile" maxlength="11" placeholder="请选择地址">
-          <!-- <input type="text" class="select-value" value="广东省" readonly="readonly" style="transform: translateY(0px);"> -->
+        <div class="form-list form-address" >
+          <input type="text" class="inp" id="address" placeholder="请选择地址" >
         </div>
         <div class="form-list">
           <select class="inp select" name="money" placeholder="请选择需求额度">
@@ -111,28 +110,13 @@
     <div class="layer-btn">确定</div>
   </div>
   <!-- 弹窗 -- end -->
-  
-  <div class="addr-fixed-main">
-    <div class="flex">
-      <div class="province-main">
-        <ul id="province " class="addr-list"></ul>
-      </div>
-      <div class="city-main">
-        
-      </div>
-    </div>
-    <div class="btn-box">
-      <div class="close">取消</div>
-      <div class="submit">确定</div>
-    </div>
-  </div>
-  
-  <div class="mPicker hide"><div class="mPicker-mask hide"></div></div>
+
 </body>
+<script src="../js/city.js"></script>
 <script src="../js/jquery-1.11.3.min.js"></script>
 <script src="../js/fastclick.js"></script>
 <script src="../js/qi.js"></script>
-<script src="../js/index.js"></script>
+<script src="../js/picker.min.js"></script>
 
 
 
